--- a/README.Rmd
+++ b/README.Rmd
@@ -14,9 +14,17 @@ Link to csafe server: https://isu-csafe.stat.iastate.edu/rstudio/
 
 ## Talking points
 
-- I am thinking about moving the paper to a new repository and then renaming this repository as LIME-research-journals and using it more as a place to try stuff out
-- Can I remove some of the sources from the references file that I am not going to use?
-- Can we talk about how best to present the LIME algorithm and some of the terms from the original paper that do not make sense in the context of the R package?
+- Paper:
+    - Can I remove some of the sources from the references file that I am not going to use?
+    - Can we talk about how best to present the LIME algorithm and some of the terms from the original paper that do not make sense in the context of the R package?
+    - Subsections in the introduction?
+    - See other comments in the paper
+    - I am thinking about moving the paper to a new repository and then renaming this repository as LIME-research-journals and using it more as a place to try stuff out
+- Graphics Group:
+    - schedule
+    - current list of volunteers
+- Sandia Internship:
+    - email from Danny
 
 ## To Do List
 
