--- a/papers/lime_diagnostics/code/figure-creation.Rmd
+++ b/papers/lime_diagnostics/code/figure-creation.Rmd
@@ -185,3 +185,67 @@ ggsave(filename = "../figures/lime_figure_bad.png",
        height = 6, width = 4)
 ```
 
+# Second Attempt
+
+```{r}
+# Generate data
+set.seed(20190624)
+all_observations <- data.frame(case = factor("Other", levels = c("Other", "Prediction of Interest")),
+                        feature1 = sort(runif(250, 0, 1)),
+                        feature2 = sample(x = 1:250, size = 250, replace = FALSE)) %>%
+  mutate(prediction = if_else(feature1 >= 0 & feature1 < 0.1, (0.3 * feature1) + rnorm(n(), 0, 0.01), 
+                      if_else(feature1 >= 0.1 & feature1 < 0.3, rbeta(n(), 1, 0.5), 
+                      if_else(feature1 >= 0.3 & feature1 < 0.5, sin(pi* feature1) + rnorm(n(), 0, 0.5),
+                      if_else(feature1 >= 0.5 & feature1 < 0.8, -(sin(pi* feature1) + rnorm(n(), 0, 0.1)) + 1,
+                      if_else(feature1 >= 0.8 & feature1 < 0.9, 0.5 + runif(n(), -0.5, 0.5), 
+                              0.5 + rnorm(n(), 0, 0.3)))))))
+```
+
+```{r}
+# Specify a prediction of interest
+prediction_of_interest <- data.frame(case = factor("Prediction of Interest", 
+                                                   levels = c("Other", "Prediction of Interest")),
+                                     feature1 = 0.07,
+                                     feature2 = 200,
+                                     prediction = 0.05)
+```
+
+```{r}
+lime_data <- bind_rows(all_observations, prediction_of_interest)
+```
+
+
+```{r}
+# Compute the distance between the prediction of interest 
+lime_data$distance <- (1 - gower_dist(x = prediction_of_interest, y = lime_data))^20
+lime_data$distance_bad <- (1 - gower_dist(x = prediction_of_interest, y = lime_data))^1
+
+# Fit the interpretable explainer models
+lime_explainer <- lm(prediction ~ feature1 + feature2, data = lime_data, weights = distance)
+lime_explainer_bad <- lm(prediction ~ feature1 + feature2, data = lime_data, weights = distance_bad)
+```
+
+```{r}
+lime_data_gathered <- lime_data %>%
+  gather(key = feature, value = value, 2:3) %>%
+  gather(key = distance_case, value = distance_value, 3:4)
+```
+
+```{r}
+ggplot(data = lime_data_gathered, 
+       mapping = aes(x = value, 
+                     y = prediction, 
+                     size = distance_value,
+                     shape = case)) + 
+  geom_point(alpha = 0.5) + 
+  geom_abline(data = lime_data_gathered %>% 
+                filter(feature == "feature1", distance_case == "distance"),
+              intercept = coef(lime_explainer)[[1]] +
+                coef(lime_explainer)[[3]]*prediction_of_interest$feature2, 
+              slope = coef(lime_explainer)[[2]], 
+              size = 1) +
+  #stat_smooth(data = lime_data_gathered %>% filter(feature == "feature2")) +
+  facet_grid(distance_case ~ feature, scales = "free") + 
+  theme_bw()
+```
+
