--- a/papers/lime_diagnostics/visual-diagnostics-of-a-model-explainer.Rnw
+++ b/papers/lime_diagnostics/visual-diagnostics-of-a-model-explainer.Rnw
@@ -21,6 +21,7 @@
 \raggedbottom
 
 \begin{document}
+\SweaveOpts{concordance=TRUE}
 
 % R code chunk options
 %\SweaveOpts{concordance = TRUE, echo = FALSE}
@@ -60,7 +61,7 @@ To check on when editing writing:
 
 \kg{*** I added some subsections to the introduction, because it was getting so long. What do you think? Would it be better to make the introduction shorter and move the details to a separate section?}
 
-In the field of statistics, there are two main uses for models: inference and prediction. Machine learning models are often used for the latter purpose. While these models have been proven to perform well in a wide range of prediction problems, their accuracy comes at the cost of interpretability. They are often complex algorithms that are good at identifying patterns in the data but \hh{often} lack a functional form, \hh{making it impossible} to directly interpret them. As a result, they \hh{HH: who is they - make that explicit. always.} produce predictions that lack an explanation, which has earned them the reputation of being ``black-box models". 
+In the field of statistics, there are two main uses for models: inference and prediction. Machine learning models are often used for the latter purpose. While these models have been proven to perform well in a wide range of prediction problems, their accuracy comes at the cost of interpretability. Machine learning models are generally complex algorithms that are good at identifying patterns in the data but \hh{often} lack a functional form, which makes it impossible to directly interpret them \kg{***Should I change this them?}. As a result, machine learning learning models produce predictions that lack an explanation, which has earned them \kg{***What about this one?} the reputation of being ``black-box models". 
 \hh{HH: I would make the claim that the need for explanations goes even deeper. Even if a functional form exists, such as in a linear model, there are situations where the model gets complicated enough to be not or not easily interpretable. Only very good natured three-way interactions in a logistic regression are interpretable. For the other ones more work is needed than most audiences would be capable of. Explainer models can be used in those situations as well.}
 
 \subsection{The Importance of Explanability}
@@ -93,9 +94,11 @@ Figure \ref{fig:limeconcept} provides a visualization of this conceptual underst
 
 \subsection{Motivation for Diagnosing LIME}
 
+\kg{While reading through the original paper again, I rediscovered this quote. This may be something to reference or quote in this section: ``...our choice of $G$ (sparse linear models) means that if the underlying model is highly non-linear even in the locality of the prediction, there may not be a faithful explanation. However, we can estimate the faithfulness of the explanation on $\mathcal{Z}$, and present this information to the user. This estimate of faithfulness can also be used for selecting an appropriate family of explanations from a set of multiple interpretable model classes, thus adapting to the given dataset and the classifier. We leave such exploration for future work, as linear explanations work quite well for multiple black-box models in our experiments."}
+
 At a conceptual level, explainer models add another level of complexity to predictive models: in trying to explain the black-box model, a simpler explainer model is added. To be able to trust in the explanation it is imperative to check that the explainer model is reliable and does not over-simplify the black-box model.
 
-The current implementations of LIME use a linear regression model as the explainer model \citep{lime} (references to R and Python packages) \hh{for which models? LIME uses neural networks for image analyses}. These implementations are relying on the assumption that the relationship between the complex model predictions and the features is linear in a local region. \hh{HH: be a bit careful in the phrasing here - we can always approximate any function using a linear form (think Taylor expansion). The question is how big the error is. } It is important to assess this assumption in the local region of interest in order to trust the explanations produced by LIME. \hh{The next sentence is muddying the waters - by being able to doagnose explainer models we will be able to assess the different settings offered in the implementations. Let's bring those up later. }
+The current implementations of LIME use a linear regression model as the explainer model \citep{lime} (references to R and Python packages) \hh{for which models? LIME uses neural networks for image analyses} \kg{I think that it is actualy using ridge regression for all cases - even images}. These implementations are relying on the assumption that the relationship between the complex model predictions and the features is linear in a local region. \hh{HH: be a bit careful in the phrasing here - we can always approximate any function using a linear form (think Taylor expansion). The question is how big the error is. } It is important to assess this assumption in the local region of interest in order to trust the explanations produced by LIME. \hh{The next sentence is muddying the waters - by being able to doagnose explainer models we will be able to assess the different settings offered in the implementations. Let's bring those up later. }
 Additionally, the implementations offer various input settings, but little work has been done to provide advice on how to specify the settings in practice (look more into this). An assessment of the explanations could also help to determine which settings produce the explainer model with the best approximation of the complex model.
 
 Figure \ref{fig:limebadapprox} provides an example where the explainer model is doing a poor job of approximating the complex model. The plots were created using the same data as Figure \ref{fig:limeconcept}, but the Gower distance metric was adjusted \kg{(add exponent value)}, so that observations further away from the prediction of interest are given larger weights. In this case, the explainer model is doing a poor job of capturing the relationship between the black-box predictions and the feature for both Feature 1 and Feature 2. However, the magnitude of the slope of the line in the bottom figure appears to be larger than . As a result, this explainer model would return an explanation that Feature 2 is driving the prediction made by the black-box model for the case of interest, which is not an accurate explanation.
