--- a/README.Rmd
+++ b/README.Rmd
@@ -14,18 +14,6 @@ Link to csafe server: https://isu-csafe.stat.iastate.edu/rstudio/
 
 ## Talking points
 
-- Paper:
-    - Can I remove some of the sources from the references file that I am not going to use?
-    - Can we talk about how best to present the LIME algorithm and some of the terms from the original paper that do not make sense in the context of the R package?
-    - Subsections in the introduction?
-    - See other comments in the paper
-    - I am thinking about moving the paper to a new repository and then renaming this repository as LIME-research-journals and using it more as a place to try stuff out
-- Graphics Group:
-    - schedule
-    - current list of volunteers
-- Sandia Internship:
-    - email from Danny
-
 ## To Do List
 
 **Current**
@@ -84,39 +72,19 @@ Link to csafe server: https://isu-csafe.stat.iastate.edu/rstudio/
 
 Descriptions of the materials in this respository are listed below.
 
-**app**
-
-This folder contains files for Shiny app for visualizing the LIME explanations associated with the bullet land comparisons: 
-
-- `app.R`: code for the Shiny app
-
 **code**
 
 This folder is a place for storing code that is used throughout the project:
 
+- `app.R`: code for the Shiny app for visualizing the LIME explanations associated with the bullet land comparisons
 - `helper_functions.R`: R script with functions that I use in the journals and will probably end up using in the papers as well
-
-**data**
-
-This folder is a location for storing raw and created data for the project:
-
-- `hamby173and252_train.csv`: training data that I cleaned (it should match the data used to fit `rtrees`)
-- `hamby224_bin_boundaries.rds`: contains the boundaries for the bins as created by the `lime` function for each of the LIME input settings from the single implementation 
-- `hamby224_bins.rds`: contains nice forms of the bin intervals (i.e. [lower, upper)) created using the bin boundaries for each of the LIME input settings from the single implementation 
-- `hamby224_explain`: the output from the `explain` function in lime from the single implementation with all of the different input options
-- `hamby224_lime`: the output from the `lime` function in lime from the single implementation with all of the different input options
-- `hamby224_lime_comparisons`: a dataset with summaries of the LIME explanations from the single implementation with all of the different input options
-- `hamby224_lime_inputs`: LIME input settings used for the single implementation of LIME
-- `hamby224_sensitivity_inputs`: LIME input settings used for the sensativity analysis of LIME
-- `hamby224_sensitivity_joined.csv`: the test data and the LIME explanations from the sensativty analysis joined in a dataframe
-- `hamby224_sensitivity_outputs.rds`: outputs from the `explain` function applied for each of the different input settings from the sensativity analysis combined in one dataframe
-- `hamby223_test.csv`: testing data that I cleaned (created from sets 1 and 11 of the Hamby 224 study)
-- `hamby224_test_explain.rds`: dataframe with the testing data and the output LIME explanation data from the single implementation with all of the different input options
-- raw: original data given to me by Heike
-    - `features-hamby173and252.csv`
-    - `h224-set1-features.rds`
-    - `h224-set11-features.rds`
   
+**figures**
+
+This folder contains static images:
+
+- `lime.png`: fun picture of a lime to use in the readme
+
 **journals**
 
 This folder contains folders with research journals.
@@ -132,11 +100,12 @@ This folder contains folders with research journals.
 - `08-iris_comparison`: applying LIME to a random forest fit to the iris data
 - `09-understanding_lime`: attempts to visualize the results from LIME to understand how LIME works
 - `10-other_explainers`: trying out other model explainers
+
+**main**
+
+The documents contained in the top folder are as follows:
+
+- `.gitattributes`: attributes relating to git
+- `.gitignore`: files to ignore
 - `notes from Heike.pdf`: scans of notes written by Heike for this project
-
-**papers**
-
-This folder contains the statistics and firearm examiners papers: 
-
-- `bullet_application`: explains how LIME can be used to understand the random forest model fit to bullet matching data
-- `lime_diagnostics`: explains the need to assess LIME and presents some visual diagnostic tools
+- `README`: document containing to do list and contents of this repository
