--- a/README.Rmd
+++ b/README.Rmd
@@ -14,11 +14,24 @@ Link to csafe server: https://isu-csafe.stat.iastate.edu/rstudio/
 
 ## Talking points
 
+- Graphics Group
+    - email list (should I be added as an admin?)
+
 ## To Do List
 
 **Current**
 
-- work on first draft of paper
+- keep the LIME procedure at a higher level in the paper
+- check for ridge regression model in Python code
+- compute generalized $R^2$ for my images
+- change to computing the $\mathcal{L}$ metric from the paper
+- check if Python package outputs the locality metric
+- add figure descriptions in both caption and text
+- move sentence on various settings to back of paper
+- go back through LIME procedure and update with new understanding (such as d' can be larger than d)
+- get rid of current implementation in text (change to original paper and mention doing this for model agnostic reasons)
+- add an assert_that statement in the code to check if the LIME package is changing
+- first draft of paper due two weeks into the semester (September 10)
 - read through papers giving an overview of the current explanation methods
 
 **Later**
