--- a/journals/00-objectives_and_ideas/00-objectives_and_ideas.Rmd
+++ b/journals/00-objectives_and_ideas/00-objectives_and_ideas.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "00-objectives_and_ideas"
+title: "Objectives and Ideas"
 author: "Katherine Goode"
 date: "`r format(Sys.time(), '%B %d, %Y')`"
 output:
@@ -13,30 +13,36 @@ output:
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-# Overview
+This journal explains the objectives and ideas for the research project on applying LIME to the Hamby bullet data that is detailed in this series of journals. 
 
-This journal explains the objectives of the research project on applying LIME to the Hamby bullet data that is detailed in this series of journals. 
+# Objectives
 
-# Objectives of the Research Project
+### Overall
 
-It is the hope that this research project will result in two papers. One will focus on a statistical assessment of LIME and the other will focus on the explanation of how the application of LIME to the Hamby bullet data can help firearm examiners understand the random forest model predictions.
+- Understand how LIME works
+- Consider ways to improvement LIME
+- Apply LIME (or some improved version of LIME) to interpret the random forest model fit to the Hamby bullet data
 
-### Statistical Paper Presenting Visual Diagnostic Tools for LIME
+### Possible Papers
 
-Write a paper that introduces some visual diagnostics for LIME to assess its performance. Key points that will be made:
+Here are ideas for possible papers.
 
-1. explainer model is really bad (probably due to the binning)
-2. local explanations at not local
+**Statistical Paper Presenting Visual Diagnostic Tools for LIME**
 
-### Statistical Paper Assessing LIME
+This paper would assess the explainations produced by LIME. It would introduce some visual diagnostics for LIME to assess its performance. Key points that will be made:
 
-While applying LIME to the bullet matching dataset, we found that the explanations were not as good as we wanted them to be. This has led us to try to understand why the LIME algorithm is not working well and to propose some new methods to improve the algorithm. This paper will discuss isusses we found with the current LIME agorithm, describe our proposed approaches, and compare the results.
+1. Explainer model is really bad (probably due to the binning)
+2. Local explanations at not local
 
-### Firearm Examiner's Paper
+**Statistical Paper Assessing LIME**
+
+This paper would be an explanation of how the application of LIME to the Hamby bullet data can help firearm examiners understand the random forest model predictions. When we first applied LIME to the bullet matching dataset, we found that the explanations were not as good as we wanted them to be. This has led us to try to understand why the LIME algorithm is not working well. We even tried some new sampling methods to improve the algorithm. They mde a bit of improvement, but the improvements could be much better. This paper could discuss isusses we found with the current LIME agorithm, describe our proposed approaches, and compare the results.
+
+**Firearm Examiner's Paper**
 
 CSAFE is developing a predictive model that is able to match a bullet to the gun barrel that fired the bullet. They have acquired some sets of the data from the Hamby study. Part of this data was used to train a random forest model (`rtrees`), and the remaining portion of the data will be used as a testing dataset. CSAFE would now like to understand the predictions made by the random forest to be able to provide a better explanation of how the model works to the firearm examiners. Thus, it is of interest to apply the LIME algorithm to the predictions made by the random forest model on the testing data to see which variables LIME suggests are driving individual predictions.
 
-# Concerns with LIME
+# Concerns
 
 The following are some of the concerns that we have with the current state of the LIME algorithm.
 
@@ -55,6 +61,6 @@ The following are some of the concerns that we have with the current state of th
     - does lime find the local models?
 - Maybe we could come up with a test to compare between global and local explanations (but how would we do this?)
 
-# General Thoughts about LIME
+# General Thoughts
 
 - LIME is kind of like a jacknife technique
