added talking point

--- a/README.Rmd
+++ b/README.Rmd
@@ -23,6 +23,7 @@ Link to csafe server: https://isu-csafe.stat.iastate.edu/rstudio/
     - emailed Min (waiting for a response)
     - show updated schedule
     - Susan's idea (could we ask Joe, Erin, and/or Charlotte if they would be interested in preparing this talk?)
+    - How to include an image in the preview of a post in blogdown?
 
 ## To Do List
 
